    * Add filetype Objective-C (Elias Pschernig, P#3325139).
    * Fix highlighting of ``...R"`` inside C and C++ (#3425107).
    * Fix TCL keyword highlighting in some situations (#3432877).
    * Parse PHP functions with multiline argument list (#3037797).
    * Handle ``/bin/dash`` shebang (#3470986).
    * Update JavaScript parser from CTags.
    * Parse D class, struct, interface template bodies and template
      blocks; ignore 'static if' expressions.
    * Fix broken tag/word autocompletion in HTML/PHP documents.
    * Enable &entity; completion for all XML-based filetypes.

    Plugins
    * Split Window: show marker margin.
    * Split Window: enable basic context menu.

    API:
    * document_save_file() now shows the Save As dialog when necessary.
    * Rename signal "project-dialog-create" to "project-dialog-open" and
      add new "project-dialog-close" signal.
    * setptr is deprecated in favour of SETPTR.
    * Add ui_hookup_object() and ui_lookup_object().
    * Add ui_lookup_stock_label().
    * Add build_{activate,get_current,remove,set}_menu_item(),
      build_get_group_count().
    * Add stash_group_free_settings().
    * Add support for plugins written in C++.

    Internationalisation:
    * Add translations: ar, id, lt, mn, nn, sk
    * Update translations: de, hu, it, kk, pl, sl, sv, zh_TW


Geany 0.21 (October 2, 2011)

    General
    * Bump dependencies to GTK >= 2.12, GLib >= 2.16 and GIO.
    * Add support for real-time symbol parsing.
    * Remove old filetype templates support - use custom file
      templates instead.
    * Add support for detecting the indentation width from the file
      content.

    Bug fixes
    * Fix generating tag files (-g) and --ft-names segfault.
    * Replace dates on template insertion, not when loading templates.
    * Fix segfault when inserting e.g. fileheader template when the
      template file is empty (#3070913, lphilpot).
    * Use the same indentation for all templates (Matthew Brush,